updated contact page. standardised layout with bootstrap. there is a bug on nav bar collapse to work out

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,8 @@ html, body{
 }
 .navbar-brand{
   padding-top:15px;
+  position:absolute;
+  left: 2rem;
 }
 .navbar-nav{
  position:absolute;
@@ -12,6 +14,14 @@ html, body{
 
 .home-posts{
   padding-top:20px;
+}
+
+.row i{
+  padding-top:20px;
+font-size: 2rem ;
+}
+.row i:hover{
+  color:#1abc9c;
 }
 .footer-padding {
   padding-bottom: 60px;
